Implements title block, closes #30

--- a/django/example/templates/category_shop.html
+++ b/django/example/templates/category_shop.html
@@ -3,6 +3,10 @@
 {% load i18n %}
 {% load index from example %}
 
+{% block title %}
+    Category shop
+{% endblock %}
+
 {% block body %}
   <nav>
     <ol>
