--- a/django/example/templates/category_shop.html
+++ b/django/example/templates/category_shop.html
@@ -10,7 +10,7 @@
         <a href="{% url 'category-list' %}">{% trans 'Categories' %}</a>
       </li>
       <li>
-        <a href="{% url 'profile' %}">{% trans 'Profile' %}</a>
+        <a href="{% url 'profile' %}">{% trans 'Profile' %} ({{ user.username }})</a>
       </li>
       <li>
         <a href="{% url 'notification-list' %}">{% trans 'Notifications' %}</a>
