--- a/django/example/templates/notification_list.html
+++ b/django/example/templates/notification_list.html
@@ -12,7 +12,7 @@
         <a href="{% url 'category-shop' %}">{% trans 'Shop' %}</a>
       </li>
       <li>
-        <a href="{% url 'profile' %}">{% trans 'Profile' %}</a>
+        <a href="{% url 'profile' %}">{% trans 'Profile' %} ({{ user.username }})</a>
       </li>
       <li>
         <a href="{% url 'logout' %}">{% trans 'Logout' %}</a>
