Applied {% trans %} to all places with text blocks

--- a/django/example/templates/category_shop.html
+++ b/django/example/templates/category_shop.html
@@ -4,7 +4,7 @@
 {% load index from example %}
 
 {% block title %}
-    Category shop
+    {% trans 'Category list' %}
 {% endblock %}
 
 {% block body %}
