--- a/django/example/templates/notification_list.html
+++ b/django/example/templates/notification_list.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    Notification list
+    {% trans 'Notification list' %}
 {% endblock %}
 
 {% block body %}
